# CapEx-Copilot

./: .gitignore  README.md  embedding.py  pyproject.toml
corpus/: _manifest.json  addendum__erp_replacement_change_request.md  audit__tech_portfolio_risk_memo.md  case__ai_customer_service_chatbot.md  case__cloud_infrastructure_migration.md  case__customer_data_platform_ai_personalization.md  case__cybersecurity_zero_trust_modernization.md  case__erp_replacement_cloud_migration.md  case__omnichannel_pos_unified_commerce.md  case__wms_robotics_pilot.md  glossary__financial_methodology_reference.md  memo__cfo_fy2027_portfolio_prioritization.md  minutes__steering_committee_2026_q1.md  minutes__steering_committee_2026_q3.md  policy__business_case_review_and_template_guide.md  review__cloud_migration_post_implementation_12mo.md  review__pos_unified_commerce_post_implementation_6mo.md  tracker__benefits_realization_q2_2026.md  vendor__erp_finalists_scorecard.md  vendor__wms_robotics_finalists_scorecard.md
openclaw-rag-retrieve/: README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-rag-retrieve/src/: index.test.ts  index.ts
pinecone-corpus/: SKILL.md
pinecone-corpus/scripts/: ingest_document.py  retrieve_chunks.py
src/capex_copilot/: __init__.py  __main__.py  chunker.py  pineconedb.py
src/capex_copilot/agent/: __main__.py
src/capex_copilot/ingester/: __init__.py  __main__.py  chunker.py  document_ingester.py  embedder.py  pineconedb.py
src/capex_copilot/rag-retrieve/: __init__.py  plugin.yaml
src/capex_copilot/retriever/: __init__.py  __main__.py  retriever.py
