#
# Copyright (C) 2026
# Created by asuyer-forumsys, asuyer@forumsys.com
#

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capex_copilot"
description = ""
version = "0.1.0"
authors = [
    {name = "asuyer-forumsys", email = "asuyer@forumsys.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy",
    "typing",
    "openai",
    "httpx",
    "pinecone",
    "chonkie",
    "colorama",
]

[tool.setuptools]
# # include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# # Assumes folder structure with CapEx-Copilot/src/capex_copilot
where = ["src"]

